// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-talon-one destination: createAudience action - all fields 1`] = `
Object {
  "audienceId": "Ns^3TjD",
  "audienceName": "Ns^3TjD",
}
`;

exports[`Testing snapshot for actions-talon-one destination: createAudience action - required fields 1`] = `
Object {
  "audienceId": "Ns^3TjD",
  "audienceName": "Ns^3TjD",
}
`;

exports[`Testing snapshot for actions-talon-one destination: deleteAudience action - all fields 1`] = `""`;

exports[`Testing snapshot for actions-talon-one destination: deleteAudience action - required fields 1`] = `""`;

exports[`Testing snapshot for actions-talon-one destination: deleteAudience action - required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "ApiKey-v1 some_api_key",
    ],
    "destination-hostname": Array [
      "%(D1Zib7U(",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for actions-talon-one destination: trackEvent action - all fields 1`] = `
Object {
  "customerProfileId": "fU[[CRDXd2",
  "eventAttributes": Object {
    "testType": "fU[[CRDXd2",
  },
  "eventType": "fU[[CRDXd2",
  "type": "fU[[CRDXd2",
}
`;

exports[`Testing snapshot for actions-talon-one destination: trackEvent action - required fields 1`] = `
Object {
  "customerProfileId": "fU[[CRDXd2",
  "eventType": "fU[[CRDXd2",
  "type": "fU[[CRDXd2",
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateAudience action - all fields 1`] = `
Object {
  "audienceName": "y73nLJ!",
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateAudience action - required fields 1`] = `
Object {
  "audienceName": "y73nLJ!",
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfile action - all fields 1`] = `
Object {
  "attributes": Object {
    "testType": "GSv&J8",
  },
  "audiencesChanges": Object {
    "adds": Array [
      -7356410144751616,
    ],
    "deletes": Array [
      -7356410144751616,
    ],
  },
  "runRuleEngine": true,
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfile action - required fields 1`] = `
Object {
  "audiencesChanges": Object {},
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfilesAttributes action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "testType": "zIuxxC8$",
      },
      "customerProfileId": "zIuxxC8$",
    },
  ],
  "mutualAttributes": Object {
    "testType": "zIuxxC8$",
  },
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfilesAttributes action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customerProfileId": "zIuxxC8$",
    },
  ],
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfilesAudiences action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "adds": Array [
        -5649754167967744,
      ],
      "customerProfileId": "g64#i$3",
      "deletes": Array [
        -5649754167967744,
      ],
    },
  ],
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfilesAudiences action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customerProfileId": "g64#i$3",
    },
  ],
}
`;
